# seeker

./: .gitignore  AGENTS.md  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: README.zh-CN.md
scripts/: setup-sidecar.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: fs.rs  mod.rs  model.rs  secret.rs  watch.rs  workspace.rs
src-tauri/src/shared/fs/: list.rs  mod.rs  search.rs  watch.rs  watcher.rs
src-tauri/src/whale/: mod.rs
src/components/: AppSidebar.tsx  DiffViewer.tsx  ProjectSelector.tsx  ProviderIcons.tsx  RightPanel.tsx  ThemeContext.tsx  app-sidebar.tsx  copy-icon.tsx  layout.tsx  project-selector.tsx  right-panel.tsx
src/components/features/files/: FileTree.tsx  FileView.tsx  OfficeView.tsx  file-tree.tsx  fs.ts  index.tsx  types.ts  useFileTree.ts  utils.ts
src/components/whale/: ThreadList.tsx  WhaleView.tsx  thread-list.tsx  types.ts  use-whale-store.ts  useWhaleStore.ts  whale-view.tsx
src/components/whale/cells/: EventItem.tsx  (+7 more)
src/hooks/: index.ts  useDevWindowPosition.ts
src/lib/: get-filename.ts  i18n.ts
src/locales/: en.ts  index.ts  zh.ts
src/services/: types.ts
src/services/tauri/: git.ts  index.ts  secret.ts  watch.ts  whale.ts  workspace.ts
src/stores/: index.ts  useFileViewStore.ts  useLayoutStore.ts  useSettingsStore.ts  useWorkspaceStore.ts
src/views/: AboutView.tsx  SettingsView.tsx  SkillsView.tsx  about-view.tsx
(+13 files in other folders)
