[package]
name = "seeker"
version = "0.1.1"
description = "Deepseek agent command center"
authors = ["milisp"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seeker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
log = "0.4"

anyhow = "1.0.102"
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full", "io-util", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
notify-debouncer-full = "0.7.0"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
thiserror = "2.0.18"

fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
notify = "8.2.0"
ignore = "0.4.26"
